fixed scrolling overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 
     padding: 20px;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .divC {
